avancé manqué les vue

--- a/templates/_partials/nav.html.twig
+++ b/templates/_partials/nav.html.twig
@@ -11,27 +11,26 @@
                 <a class="nav-link active" aria-current="page" href="{{ path('main') }}">Accueil</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="{{ path('categories_list', {'id': 2}) }}">produits</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
+                <a class="nav-link dropdown-toggle dropdown-toggle-split" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Produits
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    {% for category in categories %}
+                        <li><a class="dropdown-item" href="{{ path('categories_list', {'id': category.id}) }}">{{ category.name }}</a></li>
+                    {% endfor %}
                 </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
-              </li>
+            </li>
             </ul>
-            <form class="pos d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+            <form class="pos d-flex" role="search" action="{{ path('products_search') }}" method="get">
+              <input class="form-control me-2" type="search" name="searchTermFromNavbar" placeholder="Search" aria-label="Search">
+            
+              <!--<button class="btn btn-outline-success" type="submit">Search</button>-->
+                <button type="submit" class="btn btn-primary">Rechercher</button>
             </form>
+           
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 {% if app.user %}
                   {% if is_granted('ROLE_PRODUCT_ADMIN') %}
