--- a/templates/admin/categories/edit.html.twig
+++ b/templates/admin/categories/edit.html.twig
@@ -7,7 +7,7 @@
     <section class="row">
         <div class="col-12">
             <h1>Modifier une categorie</h1>
-            {% include "admin/categories/form.html.twig" with {'button_label': 'Modifier'} %}
+            {% include "admin/categories/edit_form.html.twig" with {'button_label': 'Modifier'} %}
         </div>
     </section>
 </main>
