--- a/templates/admin/users/edit.html.twig
+++ b/templates/admin/users/edit.html.twig
@@ -7,7 +7,8 @@
     <section class="row">
         <div class="col-12">
             <h1>Modifier un utilisateur</h1>
-            {% include "admin/users/form.html.twig" with {'button_label': 'Modifier'} %}
+            
+            {% include "admin/users/edit_form.html.twig" with {'button_label': 'Modifier'} %}
         </div>
     </section>
 </main>
