--- a/templates/admin/users/index.html.twig
+++ b/templates/admin/users/index.html.twig
@@ -51,7 +51,7 @@
                             </td>
                             
                             <td>
-                                <a href="{{ path('admin_users_index', {'id': user.id}) }}" class="btn btn-success">Modifier</a>
+                                <a href="{{ path('admin_users_edit', {'id': user.id}) }}" class="btn btn-success">Modifier</a>
                             </td>
                             <td>
                                 
