--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -40,7 +40,7 @@
                     <tfoot>
                         <tr>
                             <td clospan="3">Total</td>
-                            <td>{{ Total / 100 }} €</td>
+                            <td>{{ total / 100 }} €</td>
                             <td>
                                 <a href="{{ path('orders_add') }}" class="btn btn-danger">Vider</a>
                             </td>
