--- a/templates/admin/categories/edit_form.html.twig
+++ b/templates/admin/categories/edit_form.html.twig
@@ -1,5 +1,5 @@
 {{ form_start(categoryForm) }}
     {{ form_row(categoryForm.name) }}
     {{ form_row(categoryForm.parent) }}
-    <button type="submit" class="btn btn-primary">{{ button_label|default('Ajouter') }}</button>
+    <button type="submit" class="btn btn-primary">{{ button_label|default('Modifier') }}</button>
 {{ form_end(categoryForm) }}
