--- a/templates/_partials/footer.html.twig
+++ b/templates/_partials/footer.html.twig
@@ -1,16 +1,19 @@
 
-<footer class="container-fluid bg-light">
-    <div class="row">
-        <section class="col">
-            Colonne 1
+<footer class="container-fluid bg-black text-white pt-4 pb-4">
+    <div class="col">
+        <h4 class="text-center">Contact</h4>
+        <section class="row justify-content-center">
+           <div class="col-2">Contactez-nous par email:</div>
+           <div class="col-2">E-commerce@gmail.com</div> 
         </section>
-        <section class="col">
-            Colonne 2
+        <section class="row justify-content-center">
+            <div class="col-2">Ou par télephone:</div>
+            <div class="col-2">0476267673</div> 
+            
         </section>
-        <section class="col">
-            Colonne 3
+        <section class="row justify-content-center">
+            <div class="col-2">Adresse du site:</div>
+            <div class="col-2">1 place grenet 38100 Grenoble</div> 
         </section>
-
     </div>
-
 </footer>
