--- a/templates/_partials/pagination.html.twig
+++ b/templates/_partials/pagination.html.twig
@@ -1,3 +1,29 @@
 {% if pages > 1 %}
-
+<nav>
+    <ul class="pagination">
+        {% if currentPage > 1 %}
+            <li class="page-item">
+                <a href="{{ path(path, {id: slug, page: currentPage - 1}) }}" class="page-link">&lt;</a>
+            </li>
+        {% else %}
+            <li class="page-item disabled">
+                <a class="page-link">&lt;</a>
+            </li>
+        {% endif %}
+        {% for page in 1..pages %}
+            <li class="page-item {{ (page == currentPage) ? 'active' : ''}}">
+                <a href="{{ path(path, {id: slug, page: page}) }}" class="page-link">{{ page }}</a>
+            </li>
+        {% endfor %}
+            {% if pages > currentPage %}
+                <li class="page-item">
+                    <a href="{{ path(path, {id: slug, page: currentPage + 1}) }}" class="page-link">&gt;</a>
+                </li>
+            {% else %}
+                <li class="page-item disabled">
+                    <a class="page-link">&gt;</a>
+                </li>
+        {% endif %}
+    </ul>
+</nav>
 {% endif %}
