--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -1,20 +1,14 @@
 {% extends 'base.html.twig' %}
-
-{% block title %}Hello ProfileController!{% endblock %}
-
+{% block title %}Compte{% endblock %}
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
+<h1>Bienvenue sur votre page de compte, {{ app.user.firstName }}!</h1>
+    <p>Voici quelques détails sur votre compte :</p>
     <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/utilisateur/Documents/cours/cour/src/Controller/ProfileController.php'|file_link(0) }}">src/Controller/ProfileController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/utilisateur/Documents/cours/cour/templates/profile/index.html.twig'|file_link(0) }}">templates/profile/index.html.twig</a></code></li>
+        <li>Prénom: {{ app.user.firstName }}</li>
+        <li>Nom: {{ app.user.lastName }}</li>
+        <li>Email: {{ app.user.email }}</li>
+        <li>Adresse: {{ app.user.address }}</li>
+        <li>Code postal: {{ app.user.zipcode }}</li>
+        <li>Pays: {{ app.user.city }}</li>
     </ul>
-</div>
 {% endblock %}
