--- a/templates/_partials/nav.html.twig
+++ b/templates/_partials/nav.html.twig
@@ -17,10 +17,8 @@
                     
                         <li><a class="dropdown-item" href="{{ path('categories_list', {'id': categories.id}) }}">{{ categories.name }}</a></li>
                     {% endfor %}
-                </ul>
-
-                 
-          
+                </ul> 
+                <li><a class="dropdown-item" href="{{ path('favoris_favoris_recup') }}">Favoris</a></li>
             </ul>
             <form class="pos d-flex me-5" role="search" action="{{ path('products_search') }}" method="get">
               <input class="form-control me-1" type="search" name="searchTermFromNavbar" placeholder="Search" aria-label="Search">
@@ -39,9 +37,9 @@
                   {% endif %}
                 
                     <li class="nav-item">
-                      {% if not is_granted('ROLE_ADMIN') %}
+                      <!-- {% if not is_granted('ROLE_ADMIN') %} -->
                         <a class="nav-link" href="{{path('profile_index', {'id': app.user.id})}}">Mon compte</a>
-                        {% endif %} 
+                        <!-- {% endif %}  -->
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href=" {{path('app_logout')}} ">Me déconnecter</a>
